Creación paquete repaso clases abstractas e interfaces
Ejercicio:
1- Garaje solo para objetos motorizables
2- Crear clase patinete que sea motorizable pero no vehiculo
3- Guardamos patinete en garaje

--- a/Ejem03_RepasoJS/index.html
+++ b/Ejem03_RepasoJS/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>Repaso JS: Arrays</h1>
+    <a href="ejem02_ES6.html">Ir a ecma Script 6</a>
     <script type="text/javascript">
         function Usuario(edad, nombre) {
             this.edad = edad;
