--- a/Ejem04_Servlets/WebContent/index.html
+++ b/Ejem04_Servlets/WebContent/index.html
@@ -8,6 +8,7 @@
 <h1> Bienvenido a nuestra web</h1>
 <a href="./hola">Ir al servlet</a>
 <a href="./hola.do?nombre=Argumento+desde+url">Ir al servlet web.xml</a>
+<a href="./ejemplo.jsp">Ejemplo JSP</a>
 
 </body>
 </html>
